Fix: Prevented the Custom CSS Box from becoming infinitely long and shifting its position randomly upon interaction

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2902,6 +2902,11 @@ div[data-role=controlgroup] a.ui-btn-active {
     font-family: consolas, monaco, monospace;
 }
 
+.customCssContainer textarea {
+    max-height: 40vh;
+    overflow-y: auto !important;
+}
+
 .emby-select-withcolor,
 .emby-select,
 .emby-input,
